[package]
name = "k8s_job_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-nats = "0.27.1"
chrono = { version = "0.4.23", features = ["serde"]}
derive_more = "0.99.17"
env_logger = "0.10.0"
futures = "0.3.26"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
dotenv = "0.15.0"
serde = "1.0.152"
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
async-trait = "0.1.66"
thiserror = "1.0.39"
ulid = "1.0.0"
tokio = "1.26.0"
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
kube = { version = "0.80.0", features = ["runtime", "derive"] }
log = "0.4.17"
